--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '1.1.4'
-//    id 'org.jetbrains.intellij' version '0.6.5'
+//    id 'org.jetbrains.intellij' version '1.1.4'
+    id 'org.jetbrains.intellij' version '0.6.5'
     id 'org.jetbrains.kotlin.jvm' version '1.5.10'
 }
 
@@ -10,12 +10,12 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'idea'
 
-group 'com.tao.getx'
+group 'com.colorfulwood.getx'
 // If the plug-in related properties are set here,
 // the corresponding settings in Plugin.xml will be invalid
 // The two settings below are updated frequently, so put them here
 // The version number is modified here
-version '3.2.6'
+version '6.6.6'
 // must!!!
 sourceCompatibility = 1.8
 
